fixed inline, verticle alignment

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,9 @@ $dropdown-border: 1px solid $light-gray;
     border-right: $dropdown-border;
     border-bottom: $dropdown-border;
   }
+  .timebox {
+    line-height: 56px;
+  }
 }
 @include media-breakpoint-down(md) {
   .dropdown-border {
@@ -30,6 +33,7 @@ $dropdown-border: 1px solid $light-gray;
   cursor: pointer;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  height: 64px;
   text-align: center;
 }
 
